--- a/DAY02/index.html
+++ b/DAY02/index.html
@@ -21,7 +21,7 @@
         <div id="element1">Recherche Google</div>
         <div id="element2"><a href="https://www.google.com/doodles/">J'ai de la chance</a></div>
       </div>
-      <div>
+      <div class="corona">
         <img src="images/hand.gif" alt="Covid_hand">
         <div><a href="https://www.google.com/url?q=https://www.google.fr/search%3Fq%3Dcoronavirus%2Bconseils%26fbx%3Ddothefive%26hl%3Dfr&source=hpp&id=19016789&ct=3&usg=AFQjCNHheQesZVgg5oX7EaQEr-dw_aeXQg&sa=X&ved=0ahUKEwjjlPiVvsXoAhVk8-AKHTnSC2oQ8IcBCA0">5 GESTES "BARRIÈRE" pour freiner le coronavirus</a></div>
       </div>
